<resources>
	<string name="app_name">Call Proximity Control</string>
	<string name="button_acquire">Acquire</string>
	<string name="button_release">Release</string>
	<string name="default_channel_name">Default</string>
	<string name="default_channel_description">Notification channel for Call Proximity Control</string>
	<string name="notification_title">Service started</string>
	<string name="notification_text">This notification created due limitation of Android for foreground services.</string>
	<string name="notification_action">Stop service</string>
	<string name="button_start">Start</string>
	<string name="button_stop">Stop</string>
	<string name="button_check_speaker">Speaker</string>
	<string name="switch_service">Enable Proximity Control</string>
	<string name="switch_bt_devices">BT Devices</string>
	<string name="switch_headset">Wired Headset</string>
	<string name="switch_speaker">Speaker</string>
	<string name="text_service">Enable service</string>
	<string name="text_devices">Select devices</string>
	<string name="button_check_service">service</string>
	<string name="ok">OK</string>
	<string name="settings">Settings</string>
	<string name="permission_explanation">Phone permission is needed to check phone state</string>
	<string name="permission_not_granted">Permission were not granted</string>
	<string name="permission_revoked">Revoked permission that needed to check phone state</string>
	<string name="permission_dialog_canceled">Ask dialog were turned off. Permission can be granted only in the application settings menu -> Permissions</string>
</resources>
